'fixed the dark mode bug '

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,9 +10,19 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 0, 0, 0; /* Set to your desired foreground color */
+    --background-start-rgb: 255, 255, 255; /* Set to your desired background color */
+    --background-end-rgb: 255, 255, 255; /* Set to your desired background color */
+  }
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+      color-scheme: light;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  button {
+      border: none;
   }
 }
 
@@ -31,8 +41,17 @@ body {
     text-wrap: balance;
   }
 }
-/* *{
-  border: 1px solid greenyellow;
+input{
+  background-color: #fff !important;
+}
+.input{
+  background-color: #fff !important;
+}
+.select {
+  background-color: #ffff !important;
+}
+/* .btn{
+  border: none;
 } */
 .gradient-border {
   height: 5px;
@@ -48,6 +67,7 @@ body {
   width: 1rem;
   
 }
+
 .steps .step:before {
   top: 0px;
   grid-column-start: 1;
@@ -56,17 +76,24 @@ body {
   width: 100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   --tw-bg-opacity: 1;
-  background-color: var(--fallback-b3, oklch(var(--b3) / var(--tw-bg-opacity)));
+  background-color: whitesmoke;
   --tw-text-opacity: 1;
-  color: var(--fallback-bc, oklch(var(--bc) / var(--tw-text-opacity)));
+  color: rgba(0, 105, 217, 1);
   content: "";
   margin-inline-start: -100%;
 
 }
+.steps .step:after {
+  
+  background-color:whitesmoke ;
+  --tw-text-opacity: 1;
+  color: var(--fallback-bc, oklch(var(--bc) / var(--tw-text-opacity)));
+}
 
 .steps .step-primary + .step-primary:before {
   --tw-bg-opacity: 1;
-  background-color: var(--fallback-b3, oklch(var(--b3) / var(--tw-bg-opacity)));
+  background-color: rgba(0, 105, 217, 1);
+  /* background-color: var(--fallback-b3, oklch(var(--b3) / var(--tw-bg-opacity))); */
   --tw-text-opacity: 1;
   color: var(--fallback-bc, oklch(var(--bc) / var(--tw-text-opacity)));
 }
@@ -80,7 +107,7 @@ body {
 
 .steps .step-primary + .step-primary:before, .steps .step-primary:after {
   --tw-bg-opacity: 1;
-  background-color: '';
+  background-color: rgba(0, 105, 217, 1);
   --tw-text-opacity: 1;
   color: red;
 }
